2007-03-07  Anders Carlsson  <acarlsson@apple.com>

        Leopard build fix.
        
        * Plugins/WebBaseNetscapePluginView.mm:

2007-03-07  Bruce Q Hammond  <bruceq@apple.com>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=12515
          Plug-ins that draw through the Quickdraw interface fail in a CGBitmapContex.
          <rdar://problem/4975122>

        This fixes a problem with Netscape-style Plug-ins which draw through the Quickdraw APIs
        being unable to render into offscreen bitmap contexts.

        This patches both saveAndSetNewPortStateForUpdate: and restorePortState:
        These methods now check the current context and see if appropriate setup/cleanup needs to be done
        for offscreen rendering.

        * Plugins/WebBaseNetscapePluginView.mm:
        (QDPixelFormatFromCGBitmapInfo):
        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
        (-[WebBaseNetscapePluginView restorePortState:]):

2007-03-07  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Darin.

        Use HardRetain/HardRelease.
        
        * WebView/WebDocumentLoaderMac.mm:
        (WebDocumentLoaderMac::setDataSource):
        (WebDocumentLoaderMac::attachToFrame):
        (WebDocumentLoaderMac::detachFromFrame):
        (WebDocumentLoaderMac::increaseLoadCount):
        (WebDocumentLoaderMac::decreaseLoadCount):

2007-03-07  Anders Carlsson  <acarlsson@apple.com>

        Reviewed by Maciej.

        <rdar://problem/4961259> 
        REGRESSION: Bumper Car 2.1.1 - Crash at WebCore::FrameLoader::receivedMainResourceError when encountering a invalid URL address
        
        (The crash was already fixed, this actually makes Bumper Car load the error page correctly.)
        
        This adds a "load counter" to the document loader and keeps the data source retained for as long as something is loading. 
        
        * WebCoreSupport/WebFrameLoaderClient.mm: