@@ -1,3 +1,10 @@
+2007-03-08  Anders Carlsson  <acarlsson@apple.com>
+
+        Try fixing the buildbot build.
+        
+        * Plugins/WebBaseNetscapePluginView.mm:
+        (-[WebBaseNetscapePluginView saveAndSetNewPortStateForUpdate:]):
+
 2007-03-07  Anders Carlsson  <acarlsson@apple.com>
 
         Leopard build fix.
